@@ -18,7 +18,7 @@ if [ -z "$2" ]; then
 
 	choose_recipe default "$target" "$free_size" || exit $?
 
-	auto_init_disk "$dev" || exit $?
+	auto_init_disks "$dev" || exit $?
 	get_last_free_partition_infos $dev
 else
 	# Two parameters, being run on selected free space.
